Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL)
Description
DROP DATABASE test;
|
CREATE DATABASE test;
|
USE test;
|
SET sql_mode='';
|
CREATE TABLE t3 (c1 VARCHAR(10));
|
ALTER TABLE t3 ENGINE=NonExistentEngine; ;
|
Leads to:
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=11) at ../sysdeps/unix/sysv/linux/pthread_kill.c:54
|
#1 0x000055cb770c19ef in my_write_core (sig=sig@entry=11) at /home/jan/mysql/10.5/mysys/stacktrace.c:424
|
#2 0x000055cb76b4bdc0 in handle_fatal_signal (sig=11) at /home/jan/mysql/10.5/sql/signal_handler.cc:330
|
#3 <signal handler called>
|
#4 0x000055cb76e0cb0a in wsrep_can_run_in_toi (thd=thd@entry=0x7f9db0000c58, db=db@entry=0x7f9db0010bf0 "test", table=table@entry=0x7f9db00104e8 "t3", table_list=table_list@entry=0x7f9db0010520, create_info=create_info@entry=0x7f9e05a0d420) at /home/jan/mysql/10.5/sql/wsrep_mysqld.cc:1994
|
#5 0x000055cb76e120a9 in wsrep_TOI_begin (create_info=0x7f9e05a0d420, fk_tables=0x7f9e05a0d330, alter_info=0x7f9e05a0d350, table_list=0x7f9db0010520, table=0x7f9db00104e8 "t3", db=0x7f9db0010bf0 "test", thd=0x7f9db0000c58) at /home/jan/mysql/10.5/sql/wsrep_mysqld.cc:2136
|
#6 wsrep_to_isolation_begin (create_info=0x7f9e05a0d420, fk_tables=0x7f9e05a0d330, alter_info=0x7f9e05a0d350, table_list=0x7f9db0010520, table_=0x7f9db00104e8 "t3", db_=0x7f9db0010bf0 "test", thd=0x7f9db0000c58) at /home/jan/mysql/10.5/sql/wsrep_mysqld.cc:2365
|
#7 wsrep_to_isolation_begin (thd=thd@entry=0x7f9db0000c58, db_=0x7f9db0010bf0 "test", table_=0x7f9db00104e8 "t3", table_list=table_list@entry=0x7f9db0010520, alter_info=alter_info@entry=0x7f9e05a0d350, fk_tables=fk_tables@entry=0x7f9e05a0d330, create_info=0x7f9e05a0d420) at /home/jan/mysql/10.5/sql/wsrep_mysqld.cc:2307
|
#8 0x000055cb76a4f926 in Sql_cmd_alter_table::execute (this=<optimized out>, thd=0x7f9db0000c58) at /usr/include/c++/9/ext/new_allocator.h:89
|
#9 0x000055cb7694df4e in mysql_execute_command (thd=0x7f9db0000c58) at /home/jan/mysql/10.5/sql/sql_parse.cc:6023
|
#10 0x000055cb7693db6f in mysql_parse (thd=thd@entry=0x7f9db0000c58, rawbuf=rawbuf@entry=0x7f9db0010430 "ALTER TABLE t3 ENGINE=NonExistentEngine", length=length@entry=39, parser_state=parser_state@entry=0x7f9e05a0e370, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /home/jan/mysql/10.5/sql/sql_parse.cc:8062
|
#11 0x000055cb7693d5ac in wsrep_mysql_parse (thd=0x7f9db0000c58, rawbuf=0x7f9db0010430 "ALTER TABLE t3 ENGINE=NonExistentEngine", length=39, parser_state=0x7f9e05a0e370, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /home/jan/mysql/10.5/sql/sql_parse.cc:7865
|
#12 0x000055cb7694b447 in dispatch_command (command=COM_QUERY, thd=0x7f9db0000c58, packet=<optimized out>, packet_length=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /home/jan/mysql/10.5/sql/sql_class.h:1257
|
#13 0x000055cb7694bce7 in do_command (thd=0x7f9db0000c58) at /home/jan/mysql/10.5/sql/sql_parse.cc:1370
|
#14 0x000055cb76a4ab98 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55cb7a368658, put_in_cache=put_in_cache@entry=true) at /home/jan/mysql/10.5/sql/sql_connect.cc:1410
|
#15 0x000055cb76a4b03d in handle_one_connection (arg=arg@entry=0x55cb7a368658) at /home/jan/mysql/10.5/sql/sql_connect.cc:1312
|
#16 0x000055cb76dac836 in pfs_spawn_thread (arg=0x55cb7a0d0dc8) at /home/jan/mysql/10.5/storage/perfschema/pfs.cc:2201
|
#17 0x00007f9e18cbb590 in start_thread (arg=0x7f9e05a0f640) at pthread_create.c:463
|
#18 0x00007f9e1888e223 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|